--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1"
   }
 }
